fix(button-group): fix styles when wrapped with tooltip

--- a/src/components/button-group/ButtonGroup.scss
+++ b/src/components/button-group/ButtonGroup.scss
@@ -4,8 +4,6 @@
  * Button Group
  **************************************/
 
-// In the case where there is an element in between .btn and .bdl-ButtonGroup, you can add class .bdl-ButtonWrapper to parent of .btn
-
 .bdl-ButtonGroup {
     position: relative;
 
@@ -13,7 +11,7 @@
         display: inline;
 
         > .btn,
-        > .bdl-ButtonWrapper > .btn {
+        > .bdl-targeted-click-through > .btn {
             margin-left: 0;
             padding-right: 11px;
             padding-left: 11px;
@@ -43,76 +41,72 @@
         }
     }
 
-    > .btn,
-    > .bdl-ButtonWrapper > .btn {
-        margin: 5px 0 5px -1px;
-        border-radius: 0;
+    &,
+    & > .bdl-targeted-click-through {
+        > .btn {
+            margin: 5px 0 5px -1px;
+            border-radius: 0;
 
-        &.btn-primary {
-            margin: 5px 0;
-            border-right-color: darken($primary-color, 10%);
+            &.btn-primary {
+                margin: 5px 0;
+                border-right-color: darken($primary-color, 10%);
 
-            &.is-selected {
-                color: $white;
-                background-color: darken($primary-color, 8%);
-                border-color: darken($primary-color, 15%);
-                box-shadow: none;
-            }
+                &.is-selected {
+                    color: $white;
+                    background-color: darken($primary-color, 8%);
+                    border-color: darken($primary-color, 15%);
+                    box-shadow: none;
+                }
 
-            &:last-of-type {
-                border-right-color: $primary-color;
+                &:last-of-type {
+                    border-right-color: $primary-color;
+                }
             }
         }
-    }
 
-    > .btn:first-child,
-    > .bdl-ButtonWrapper > .btn:first-child {
-        border-top-left-radius: 4px;
-        border-bottom-left-radius: 4px;
-    }
+        > .btn:first-child {
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+        }
 
-    > .btn:last-child,
-    > .bdl-ButtonWrapper > .btn:last-child {
-        border-top-right-radius: 4px;
-        border-bottom-right-radius: 4px;
-    }
+        > .btn:last-child {
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
+        }
 
-    > .btn.is-selected,
-    > .bdl-ButtonWrapper > .btn.is-selected {
-        z-index: 2; /* place on top of siblings */
-        color: $bdl-gray-80;
-        background-color: $bdl-gray-10;
-        border-color: $bdl-gray-62;
-        box-shadow: none;
-    }
-
-    > .btn:focus,
-    > .bdl-ButtonWrapper > .btn:focus {
-        z-index: 3; /* place on top of all other buttons for accessibility */
-    }
-
-    &.bdl-is-disabled,
-    &.is-disabled {
-        > .btn,
-        > .bdl-Button,
-        > .bdl-ButtonWrapper > .btn:focus {
-            color: $bdl-gray-62;
-            background-color: $bdl-gray-02;
-            border: 1px solid $bdl-gray-30;
+        > .btn.is-selected {
+            z-index: 2; /* place on top of siblings */
+            color: $bdl-gray-80;
+            background-color: $bdl-gray-10;
+            border-color: $bdl-gray-62;
             box-shadow: none;
-            cursor: default;
-            opacity: .4;
         }
 
-        > .btn-primary,
-        > .bdl-ButtonWrapper > .btn-primary {
-            color: $white;
-            background-color: $primary-color;
-            border-color: $primary-color;
-            border-right-color: darken($primary-color, 10%);
+        > .btn:focus {
+            z-index: 3; /* place on top of all other buttons for accessibility */
+        }
 
-            &:last-of-type {
-                border-right-color: $primary-color;
+        &.bdl-is-disabled,
+        &.is-disabled {
+            > .btn,
+            > .bdl-Button {
+                color: $bdl-gray-62;
+                background-color: $bdl-gray-02;
+                border: 1px solid $bdl-gray-30;
+                box-shadow: none;
+                cursor: default;
+                opacity: .4;
+            }
+
+            > .btn-primary {
+                color: $white;
+                background-color: $primary-color;
+                border-color: $primary-color;
+                border-right-color: darken($primary-color, 10%);
+
+                &:last-of-type {
+                    border-right-color: $primary-color;
+                }
             }
         }
     }
